<resources>
    <string name="menu">Menu</string>
    <string name="switchMode">Mode</string>
    <string name="Date">Date</string>
    <string name="app_name">Calendar</string>
    <string name="back">Back</string>
    <string name="addNewTask">New Task</string>
    <string name="editTasks">Edit Tasks</string>
    <string name="setWorkingHours">Set Working Hours</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="userName">Michael</string>
    <string name="logOut">Log Out</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="inputUserName">User Name:</string>
    <string name="inputPassword">Password:</string>
    <string name="next">Next</string>
    <string name="signUp">Sign Up</string>
    <string name="logIn">Log In</string>
    <string name="workingHours">Set Working Hours</string>
    <string name="checkList">CheckList</string>
    <string name="timeTable">TimeTable</string>
    <string name="Monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Thursday">Thursday</string>
    <string name="Friday">Friday</string>
    <string name="Saturday">Saturday</string>
    <string name="Sunday">Sunday</string>
    <string name="timePeriod">HH/MM to HH/MM</string>
    <string name="title">Title: </string>
    <string name="newTaskTitle">Title: </string>
    <string name="estHours">Hours: </string>
    <string name="estMinutes">Minutes</string>
    <string name="dueDate">Due Date: </string>
    <string name="estHoursToComplete">Estimated time to Complete(Hr:Min): </string>
    <string name="weeklyRecurring">Weekly Recurring: </string>
    <string name= "weeklyRecSwitch">Weekly Recurring? </string>
    <string name="delete">Delete</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="inputTaskTitle">Please input the title</string>
    <string name="inputEstHours">Please input the estimate hours</string>
    <string name="inputDueDate">Please set the due date</string>
    <string name="yesOrNo">Yes/No</string>
    <string name="inputNewUserName">Name: </string>
    <string name="inputNewUserEmail">Email Address: </string>
    <string name="inputNewUserPassword">Password: </string>
    <string name="inputNewUserConfirmPassword">Confirm Password: </string>
    <string name="submit">Submit</string>
    <string name="createAccountTitle">Create Account</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name = "today">Today</string>
    <string name = "to">To</string>
</resources>