<?xml version="1.0" encoding="utf-8"?>



<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/appName"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_weight="5"
        android:text="@string/app_name"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/colorPrimaryDark"
        />

    <EditText
        android:id="@+id/inputUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/inputUserName" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/inputPassword" />

    <Button
        android:id="@+id/logIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/logIn"
        />

    <Button
        android:id="@+id/signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/signUp"
        />


</LinearLayout>