<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#03A9F4"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/newTaskHead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/cancelNewTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:text="@string/Date"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/saveNewTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/newTaskTitleLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/newTaskTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="left"
            android:text="@string/newTaskTitle"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/inputNewTaskTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/inputTaskTitle" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/newTaskHoursLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/estHours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="left"
            android:text="@string/estHours"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/inputEstHours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:hint="@string/inputEstHours" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/newTaskDueDateLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/newTaskDueDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="left"
            android:text="@string/dueDate"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/inputNewTaskDueDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="date"
            android:hint="DD/MM/YYYY" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/newTaskWeeklyRecurringLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <CheckBox android:id="@+id/inputweeklyRecurring"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Weekly Recurring" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/recurrenceDaySelection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <RadioGroup
            android:id ="@+id/recurrenceDaySelection_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">
            <RadioButton android:id="@+id/radio_mon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="Mon" />
            <RadioButton android:id="@+id/radio_tues"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tues" />
            <RadioButton android:id="@+id/radio_wed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Wed" />
            <RadioButton android:id="@+id/radio_thurs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Thurs" />
            <RadioButton android:id="@+id/radio_fri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Fri" />
            <RadioButton android:id="@+id/radio_sat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sat" />
            <RadioButton android:id="@+id/radio_sun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sun" />
        </RadioGroup>
    </LinearLayout>


</LinearLayout>